@@ -109,9 +109,9 @@ DebugCWD=
 IncludeVerInfo=1
 AutoIncBuild=0
 MajorVer=1
-MinorVer=1
-Release=8
-Build=292
+MinorVer=2
+Release=0
+Build=323
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Project Editor
-FileVersion=1.1.8.292
+FileVersion=1.2.0.323
 InternalName=xxmProject
 LegalCopyright=
 LegalTrademarks=
