@@ -5,6 +5,7 @@ v1.2.0.?
 - demo 03 ADO: switched query store to plain SQL file
 - AutoBuild: errors shown on local path to xxm file instead of .pas filename
 - URLEncode([]) and [[?]] syntax
+- extra block prefixes for use with parser values: & % . , ;
 
 v1.1.9.300
 - sourceforge repository caught up with previous private repo, so version build number will now follow svn revision number
